Closed Bug 91961 Opened 24 years ago Closed 24 years ago

[xlib] Thread Local Storage issues in nsToolkit.cpp result in crash

Categories

(Core :: XUL, defect)

Sun
Solaris
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: timeless, Assigned: timecop)

References

()

Details

(Keywords: crash, Whiteboard: crash, want for 0.9.3 branch)

Attachments

(1 file)

dbx: warning: cannot demangle '__15nsPrefConverter' t@1 (l@1) signal SEGV (no mapping at the fault address) in (unknown) at 0x1000000 0x01000000: <bad address 0x1000000> current thread: t@1 [1] 0x1000000(0x33c2e8, 0x1000000, 0x0, 0xfe263044, 0xffbef234, 0xff0c0754), at 0xffffff [2] NS_GetCurrentToolkit__FPP10nsIToolkit(0x46ac98, 0x46ac98, 0xff184298, 0xffbef234, 0x1, 0xfe3419fc), at 0xfdd35514 [3] BaseCreate__12nsBaseWidgetP9nsIWidgetRC6nsRectPFP10nsGUIEvent_13nsEventStatusP16nsIDeviceContextP11nsIAppShellP10nsIToolkitP16nsWidgetInitData(0x46ac80, 0x0, 0x46acd0, 0xfe244a38, 0x0, 0x181ff8), at 0xfdd3e128 =>[4] StandardWidgetCreate__8nsWidgetP9nsIWidgetRC6nsRectPFP10nsGUIEvent_13nsEventStatusP16nsIDeviceContextP11nsIAppShellP10nsIToolkitP16nsWidgetInitDataPv(0x46ac80, 0x0, 0xffbef460, 0xfe244a38, 0x0, 0x181ff8), at 0xfdd35b8c [5] Create__8nsWidgetP9nsIWidgetRC6nsRectPFP10nsGUIEvent_13nsEventStatusP16nsIDeviceContextP11nsIAppShellP10nsIToolkitP16nsWidgetInitData(0x46ac80, 0x0, 0xffbef460, 0xfe244a38, 0x0, 0x181ff8), at 0xfdd359d8 [6] Initialize__16nsWebShellWindowP12nsIXULWindowP11nsIAppShellP6nsIURIiiUiiiiR16nsWidgetInitData(0x46ac80, 0x46ac80, 0xfdd7ea80, 0x3a9ee8, 0x0, 0x0), at 0xfe243ef0 [7] JustCreateTopWindow__17nsAppShellServiceP12nsIXULWindowP6nsIURIiiUiiiiPP12nsIXULWindow(0x159ba0, 0x0, 0x3a9ee8, 0x0, 0x0, 0xffe), at 0xfe241bd8 [8] CreateHiddenWindow__17nsAppShellService(0x159ba0, 0x159ba0, 0xfe24020c, 0xfe23fb48, 0xff1883a0, 0xfe740), at 0xfe240358 [9] main1__FiPPcP11nsISupports(0x159ba0, 0xffbef8bc, 0x0, 0xfeca9318, 0x3c308, 0x3c308), at 0x1ec7c [10] main(0x4, 0xffbef8bc, 0xffbef8d0, 0x3b0d8, 0x0, 0x0), at 0x1ffac SunOS 5.7 sun4u sparc SUNW,Ultra-2 weirdx-1.0.29 listening to :2, +hosting. xeyes works. ./mozilla-bin --display sun10avw.wam:2 -installer i got the profile manager and was trying to start a converted profile.
Blocks: 79119
Severity: normal → critical
Keywords: crash
QA Contact: doronr → timeless
=> m/x using gdb Program received signal SIGBUS, Bus error. 0xfdd35244 in NS_GetCurrentToolkit (aResult=0x604690) at /tmp/mozilla/widget/src/xlib/nsToolkit.cpp:107 107 NS_ADDREF(toolkit); (gdb) bt #0 0xfdd35244 in NS_GetCurrentToolkit (aResult=0x604690) at /tmp/mozilla/widget/src/xlib/nsToolkit.cpp:107 #1 0xfdd3de60 in nsBaseWidget::BaseCreate (this=0x604678, aParent=0x0, aRect=@0x6046c8, aHandleEventFunction=0xfe244a38 <nsWebShellWindow::HandleEvent(nsGUIEvent *)>, aContext=0x0, aAppShell=0x183808, aToolkit=0x0, aInitData=0xffbef578) at /tmp/mozilla/widget/src/xpwidgets/nsBaseWidget.cpp:149 #2 0xfdd358c4 in nsWidget::StandardWidgetCreate (this=0x604678, aParent=0x0, aRect=@0xffbef4d0, aHandleEventFunction=0xfe244a38 <nsWebShellWindow::HandleEvent(nsGUIEvent *)>, aContext=0x0, aAppShell=0x183808, aToolkit=0x0, aInitData=0xffbef578, aNativeParent=0x0) at /tmp/mozilla/widget/src/xlib/nsWidget.cpp:278 #3 0xfdd35710 in nsWidget::Create (this=0x604678, aParent=0x0, aRect=@0xffbef4d0, aHandleEventFunction=0xfe244a38 <nsWebShellWindow::HandleEvent(nsGUIEvent *)>, aContext=0x0, aAppShell=0x183808, aToolkit=0x0, aInitData=0xffbef578) at /tmp/mozilla/widget/src/xlib/nsWidget.cpp:225 #4 0xfe243ef8 in nsWebShellWindow::Initialize (this=0x51aa70, aParent=0x0, aShell=0x183808, aUrl=0x14d578, aCreatedVisible=0, aLoadDefaultPage=0, aZlevel=5, aInitialWidth=100, aInitialHeight=100, aIsHiddenWindow=1, widgetInitData=@0xffbef578) at /tmp/mozilla/xpfe/appshell/src/nsWebShellWindow.cpp:286 #5 0xfe241be0 in nsAppShellService::JustCreateTopWindow (this=0x1589b8, aParent=0x0, aUrl=0x14d578, aShowWindow=0, aLoadDefaultPage=0, aChromeMask=4094, aInitialWidth=100, aInitialHeight=100, aIsHiddenWindow=1, aResult=0xffbef628) at /tmp/mozilla/xpfe/appshell/src/nsAppShellService.cpp:673 #6 0xfe240360 in nsAppShellService::CreateHiddenWindow (this=0x1589b8) at /tmp/mozilla/xpfe/appshell/src/nsAppShellService.cpp:240 #7 0x1ecf0 in main1 (argc=3, argv=0xffbef92c, nativeApp=0x0) at /tmp/mozilla/xpfe/bootstrap/nsAppRunner.cpp:1263 #8 0x20020 in main (argc=3, argv=0xffbef92c) at /tmp/mozilla/xpfe/bootstrap/nsAppRunner.cpp:1599 (gdb) print toolkit $1 = (nsIToolkit *) 0x4ac0b0 (gdb) print *toolkit $2 = {<nsISupports> = {_vptr. = 0x4ac138}, <No data fields>} Path included clicking start mozilla from profile manager.
Assignee: Roland.Mainz → timecop
posting a patch in a few minutes
Status: NEW → ASSIGNED
Keywords: patch, review
yay! you are here! test this patch, please? :)
I think this is related with the crashers gisburn created for 092 mozilla. adding dependency.
Blocks: 90589, 90590, 90593
Looks good. r=zuperdee
Looking for reviews. Once this is in the trunk, probably seek approval for branch check-in, this is a major crasher...
To repeat this crash, take any recent xlib toolkit build, and start mozilla with "-ProfileManager" $ ./mozilla -ProfileManager Click "start mozilla" on the profile manager. See crash. Apply this patch, and repeat the process. See no crash. Changing description to affect the real problem.
Summary: weirdx crash near NS_GetCurrentToolkit__FPP10nsIToolkit → [xlib] Thread Local Storage issues in nsToolkit.cpp result in crash
Whiteboard: crash, want for 0.9.3 branch
Target Milestone: --- → mozilla0.9.3
Target Milestone: mozilla0.9.3 → mozilla0.9.4
Looks fine here. sr=blizzard
Woohoo. my xlib build works. fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Component: Browser-General → XP Toolkit/Widgets
Keywords: review
Resolution: --- → FIXED
yay, thanks timeless
Status: RESOLVED → VERIFIED
*** Bug 96848 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: