Bugzilla Bug 91961 [xlib] Thread Local Storage issues in nsToolkit.cpp result in crash patch by timecop@network.email.ne.jp r=zuperdee,Tomi.Leppikangas@oulu.fi sr=blizzard